--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="dialogueBox.h" />
     <ClInclude Include="EscenaTutorial.h" />
     <ClInclude Include="fighter.h" />
+    <ClInclude Include="finalMenu.h" />
     <ClInclude Include="hud.h" />
     <ClInclude Include="marblesInsanity.h" />
     <ClInclude Include="Mesa.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="dialogueBox.cpp" />
     <ClCompile Include="EscenaTutorial.cpp" />
     <ClCompile Include="fighter.cpp" />
+    <ClCompile Include="finalMenu.cpp" />
     <ClCompile Include="hud.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
     <ClCompile Include="Mesa.cpp" />
