--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="fighter.h" />
     <ClInclude Include="finalMenu.h" />
     <ClInclude Include="hud.h" />
+    <ClInclude Include="mainMenu.h" />
     <ClInclude Include="marblesInsanity.h" />
     <ClInclude Include="Mesa.h" />
     <ClInclude Include="pauseState.h" />
@@ -217,6 +218,7 @@
     <ClCompile Include="fighter.cpp" />
     <ClCompile Include="finalMenu.cpp" />
     <ClCompile Include="hud.cpp" />
+    <ClCompile Include="mainMenu.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
     <ClCompile Include="Mesa.cpp" />
     <ClCompile Include="pauseState.cpp" />
