--- a/DeathTokenBase/DeathToken/DeathToken.vcxproj
+++ b/DeathTokenBase/DeathToken/DeathToken.vcxproj
@@ -165,28 +165,25 @@
     <ClInclude Include="baccaratFlip.h" />
     <ClInclude Include="barraVida.h" />
     <ClInclude Include="battleManager.h" />
-    <ClInclude Include="Behaviour.h" />
     <ClInclude Include="button.h" />
     <ClInclude Include="card.h" />
-    <ClInclude Include="Cards.h" />
     <ClInclude Include="carrete.h" />
     <ClInclude Include="celda.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="baccaratInsanityManager.h" />
     <ClInclude Include="dialogueBox.h" />
-    <ClInclude Include="EscenaTutorial.h" />
+    <ClInclude Include="escenaTutorial.h" />
     <ClInclude Include="fighter.h" />
     <ClInclude Include="firebaseUtils.h" />
     <ClInclude Include="finalMenu.h" />
-    <ClInclude Include="Font.h" />
-    <ClInclude Include="gameList.h" />
-    <ClInclude Include="GeneraPrecios.h" />
+    <ClInclude Include="font.h" />
+    <ClInclude Include="generaPrecios.h" />
     <ClInclude Include="hud.h" />
     <ClInclude Include="inputBox.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="mainMenu.h" />
     <ClInclude Include="marblesInsanity.h" />
-    <ClInclude Include="Mesa.h" />
+    <ClInclude Include="mesa.h" />
     <ClInclude Include="pauseState.h" />
     <ClInclude Include="peleas.h" />
     <ClInclude Include="peleasInsanity.h" />
@@ -197,7 +194,6 @@
     <ClInclude Include="slotsNormal.h" />
     <ClInclude Include="soundManager.h" />
     <ClInclude Include="text.h" />
-    <ClInclude Include="endState.h" />
     <ClInclude Include="eventHandler.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameObject.h" />
@@ -226,24 +222,23 @@
     <ClCompile Include="battleManager.cpp" />
     <ClCompile Include="button.cpp" />
     <ClCompile Include="card.cpp" />
-    <ClCompile Include="Cards.cpp" />
     <ClCompile Include="carrete.cpp" />
     <ClCompile Include="celda.cpp" />
     <ClCompile Include="baccaratInsanityManager.cpp" />
     <ClCompile Include="dialogueBox.cpp" />
-    <ClCompile Include="EscenaTutorial.cpp" />
+    <ClCompile Include="escenaTutorial.cpp" />
     <ClCompile Include="fighter.cpp" />
     <ClCompile Include="firebaseUtils.cpp" />
     <ClCompile Include="finalMenu.cpp" />
-    <ClCompile Include="GeneraPrecios.cpp" />
+    <ClCompile Include="generaPrecios.cpp" />
     <ClCompile Include="hud.cpp" />
     <ClCompile Include="inputBox.cpp" />
     <ClCompile Include="mainMenu.cpp" />
     <ClCompile Include="marblesInsanity.cpp" />
-    <ClCompile Include="Mesa.cpp" />
+    <ClCompile Include="mesa.cpp" />
     <ClCompile Include="pauseState.cpp" />
     <ClCompile Include="peleas.cpp" />
-    <ClCompile Include="PeleasInsanity.cpp" />
+    <ClCompile Include="peleasInsanity.cpp" />
     <ClCompile Include="playerEconomy.cpp" />
     <ClCompile Include="ranking.cpp" />
     <ClCompile Include="rouletteChoose.cpp" />
